--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tenure"
 version = "0.1.0"
-authors = ["Michael Madden <Michael.J.Madden@centene.com>"]
+authors = ["Michael Madden <mikemadden42@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
